--- a/htdocs/components/90_variation_table.css
+++ b/htdocs/components/90_variation_table.css
@@ -36,3 +36,7 @@ img.review_status { vertical-align:middle; margin:2px 0px; }
 
 /* LD export table */
 span.ld_focus_variant {background-color:[[BUTTON_BG]]; color:[[BUTTON_TEXT]];padding:2px 4px;border-radius:5px}
+
+/* Gene and regulation */
+div.var_trans_pos     { height: 10px; width:100px; border:1px solid black; background-color:#FFF; margin-top:1px; box-shadow:1px 1px 2px #888; }
+div.var_trans_pos_sub { float:left; height: 10px; }
